# techdays26

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  TDConnect4Agent.ipynb  plot_metrics.ipynb  pyproject.toml  todos.md  torch_ntuple_net.ipynb  torch_ntuple_net_lambda.ipynb
lab1/: 0_frozen_lake_problem.ipynb  README.md  frozen_lake_enhanced.py  frozen_lake_manual.py  frozen_lake_q2.py  frozen_lake_qe.py  lab1.ipynb
lab2/: 0_problem_illustration.ipynb  1_train_ntuple_net.ipynb  2_plot_metrics.ipynb  3_legacy_td_ntuple_c4_agent.ipynb  README.md  bitboard_demo.ipynb
scripts/: make_c4_animation.py  make_gif.py
src/techdays26/: bitbully_arena.py  depth_limited_agent.py  frozen_lake_utils.py  gui_afterstate_equiv.py  gui_batch.py  gui_bitboard.py  gui_common.py  gui_credit_assignment.py  gui_epsilon.py  gui_lambda.py  gui_lambda_decay.py  gui_nstep.py  gui_ntuple.py  gui_payoff.py  gui_reward.py  gui_td_step.py  gui_td_training_step.py  legacy.py  legacy_ntuple_agent.py  logger.py  ntuple_network.py  ntuples.py  plots.py  td_agent.py  torch_board.py  training.py  utils.py
src/techdays26/frozen_lake/: frozen_lake_enhanced.py  frozen_lake_utils.py
tests/: test_board_batch.py  test_ntuples.py  test_td_encoding.py  test_training.py
